# ChangeLog for sys-cluster/util-vserver
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/util-vserver/ChangeLog,v 1.108 2012/01/30 10:45:09 hollow Exp $

*util-vserver-0.30.216_pre3004 (30 Jan 2012)

  30 Jan 2012; Benedikt Böhm <hollow@gentoo.org>
  -util-vserver-0.30.216_pre2935.ebuild, +util-vserver-0.30.216_pre3004.ebuild:
  version bump

  20 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org>
  util-vserver-0.30.216_pre2910.ebuild, util-vserver-0.30.216_pre2935.ebuild,
  util-vserver-0.30.216_pre2955.ebuild:
  ppc keywords dropped wrt #364103

*util-vserver-0.30.216_pre2955 (19 Apr 2011)

  19 Apr 2011; Benedikt Böhm <hollow@gentoo.org>
  -util-vserver-0.30.215-r3.ebuild, +util-vserver-0.30.216_pre2955.ebuild:
  bump to latest snapshot (fix #297982) and remove old ebuild

  07 Mar 2011; Jeroen Roovers <jer@gentoo.org>
  util-vserver-0.30.216_pre2910.ebuild:
  Stable for HPPA (bug #355485).

*util-vserver-0.30.216_pre2935 (18 Feb 2011)

  18 Feb 2011; Benedikt Böhm <hollow@gentoo.org>
  -util-vserver-0.30.216_pre2883.ebuild,
  util-vserver-0.30.216_pre2910.ebuild,
  +util-vserver-0.30.216_pre2935.ebuild:
  stabilize 0.30.216_pre2910 on amd64 and x86; version bump to
  0.30.216_pre2935

*util-vserver-0.30.216_pre2910 (19 Aug 2010)

  19 Aug 2010; Benedikt Böhm <hollow@gentoo.org>
  -util-vserver-0.30.215.ebuild, -util-vserver-0.30.216_pre2864.ebuild,
  +util-vserver-0.30.216_pre2910.ebuild:
  add new snapshot for 2.6.35 kernel support (you need memory control groups
  enabled)

*util-vserver-0.30.216_pre2883 (08 Apr 2010)

  08 Apr 2010; Benedikt Böhm <hollow@gentoo.org>
  -util-vserver-0.30.216_pre2855.ebuild,
  +util-vserver-0.30.216_pre2883.ebuild:
  new snapshot

*util-vserver-0.30.216_pre2864 (17 Jan 2010)

  17 Jan 2010; Benedikt Böhm <hollow@gentoo.org>
  -util-vserver-0.30.216_pre2849.ebuild,
  +util-vserver-0.30.216_pre2864.ebuild:
  new snapshot
