@@ -7,8 +7,10 @@ AUX util-vserver-0.30.215-typo.patch 564 RMD160 7b0619e24b9e30b4ba4bca2f0476a1f6
 DIST util-vserver-0.30.216-pre2910.tar.bz2 714605 RMD160 b5e1c79207809bdc91700b5017a48fd08b4701e4 SHA1 bbfede97691778520d79be33e8e6a681146393b9 SHA256 a07b90442bb1de4cedac668fd505199eeb70aff53482e0bbd2535875cde46d06
 DIST util-vserver-0.30.216-pre2955.tar.bz2 720387 RMD160 c4fba92319338ff2806bf233bfdd20c5b32e2f23 SHA1 d707d5a64450e89152997dbd41afd32b1779ed09 SHA256 abe6405d12c0eb1675a2d0adf6a4c7b69e2aea4a6acb8eee41c4d614d75d7fa0
 DIST util-vserver-0.30.216-pre3004.tar.bz2 759801 RMD160 4923d93704c0d5c96a6816f6d5485741437abc68 SHA1 9d2565dde57ff583dda35357a2542b87a5817d61 SHA256 0ca56dede2f46db2b76a97f92ed7df85d015723e30171dc50adc793fe5026b70
+DIST util-vserver-0.30.216-pre3011.tar.bz2 760407 RMD160 657f805141ac252795a116921dfa52176b9b5525 SHA1 528afbb4c759bf41a6fd81043681f14adfc49d0f SHA256 15767e70c52e524bdc0fdff89f365606af97184eb7de88fe22528495b4761a98
 EBUILD util-vserver-0.30.216_pre2910.ebuild 3573 RMD160 db376602c986be505745c75ab6e241fcb4afb41e SHA1 254d207c359282029933a643d7096ee54c33d47c SHA256 b296b6d0e7fc143045f652f6820cea10cbc204c90639cf0aa76d068afdf015bb
 EBUILD util-vserver-0.30.216_pre2955.ebuild 3718 RMD160 6b84ec959c93a1d759a464fba4e3ba5003bd006c SHA1 06c6cdcddd9e2add5a81c0c6d18526ed5a68da2f SHA256 3350ee35df322876b1c5bad8305948d09b9f16721af3c54b56130a4ad1e2b406
 EBUILD util-vserver-0.30.216_pre3004.ebuild 3714 RMD160 a0982d5c8dcfec90778a5bc093bf9940403b79f7 SHA1 7826a5f0803f1de87eafcd8b53f9683af9434d8c SHA256 a939d025376c3baea1826e50eb3dbe826aac948883ed00232f2dc83571482627
-MISC ChangeLog 22426 RMD160 7ac3fe6cd5ca7fbe3a5042f9eae9e956230020a8 SHA1 0d63892237929109e9728d44e947821741661ef9 SHA256 0b98e2aecff88132e84fd88db1053edaa47e99e22325aa0186420a15b14e1c83
+EBUILD util-vserver-0.30.216_pre3011.ebuild 2768 RMD160 b6a020d5bf060e83241cb0d429604414a4e538ce SHA1 01c69cb9fafadd569b9ec3661a792dca71782164 SHA256 0d556b489027d1cc4d6c6d95ee432c46dd026fcc0c59553764279dc3f9c2537c
+MISC ChangeLog 22632 RMD160 3ab5bd5d8947f1a6ec9fa6a5a6151bd4215823b4 SHA1 c64e31f60a156f07d51cb634376cf12c9d619d63 SHA256 02eebe36ed88427296a4600d59241e80b8dcc0bcba20f31e317df98e7e86610e
 MISC metadata.xml 518 RMD160 62a73756fb710a0464dd24600e7ec70c82e13021 SHA1 78ee9f24180c1215ebe02ac3dbba80a7a0c4a82e SHA256 5a4f424248d873af9f0a66aca2e3e60c6165288fa649ef44de4d8418232c5ac0
