@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/util-vserver
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/util-vserver/ChangeLog,v 1.108 2012/01/30 10:45:09 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/util-vserver/ChangeLog,v 1.109 2012/02/17 10:13:52 hollow Exp $
+
+*util-vserver-0.30.216_pre3011 (17 Feb 2012)
+
+  17 Feb 2012; Benedikt Böhm <hollow@gentoo.org>
+  +util-vserver-0.30.216_pre3011.ebuild:
+  version bump wrt #401203. fixes compatibility with openrc > 0.9.4
 
 *util-vserver-0.30.216_pre3004 (30 Jan 2012)
 
